[gd_scene load_steps=7 format=2]

[ext_resource path="res://Videos/LogoFinal.webm" type="VideoStream" id=1]
[ext_resource path="res://animaciones/intro.tres" type="Animation" id=2]
[ext_resource path="res://scripts/Intro.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Botones/Hannover Messe Sans.otf" type="DynamicFontData" id=4]
[ext_resource path="res://sounds/Intro.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 4 )

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="LogoAnimado" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 1 )
autoplay = true
buffering_msec = 1000

[node name="SaltarIntro" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Saltar" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -510.0
margin_top = -83.0
custom_fonts/font = SubResource( 1 )
text = "Da click para omitir..."

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Intro = ExtResource( 2 )

[connection signal="finished" from="LogoAnimado" to="." method="_on_LogoAnimado_finished"]
[connection signal="pressed" from="SaltarIntro" to="." method="_on_SaltarIntro_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
